<?xml version="1.0"?>
<package format="2">
  <name>jeep_driver</name>
  <version>0.0.0</version>
  <description>The jeep_driver package</description>

  <maintainer email="iryna.gurova@gmail.com">Iryna Hurova</maintainer>
  <license>TODO</license>
  <author email="iryna.gurova@gmail.com">Iryna Hurova</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ackermann_msgs</depend>

  <export>
  </export>
</package>
