<?xml version="1.0"?>
<package format="3">
  <name>jeep_driver</name>
  <version>0.0.0</version>
  <description>The jeep_driver package</description>

  <maintainer email="taltskaisa@gmail.com">Kaisa Talts</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
