<?xml version="1.0"?>
<package format="3">
  <name>jeep_driver</name>
  <version>0.0.0</version>
  <description>The jeep_driver package</description>

  <maintainer email="taltskaisa@gmail.com">Kaisa Talts</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- Core -->
  <depend>rclpy</depend>

  <!-- Messages -->
  <depend>ackermann_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- External runtime dependencies (not ROS packages but needed) -->
  <exec_depend>python3-smbus</exec_depend>
  <exec_depend>python3-pip</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
