<?xml version="1.0"?>
<package format="2">
  <name>jeep_driver</name>
  <version>0.0.0</version>
  <description>The jeep_driver package</description>

  <maintainer email="iryna.gurova@gmail.com">Iryna Hurova</maintainer>
  <license>TODO</license>
  <author email="iryna.gurova@gmail.com">Iryna Hurova</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>ackermann_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>

  <export>
  </export>
</package>
